AboExperimentLang/src/demo/DemoLangV001Parser.java
// Generated from /Users/tuope/NetBeansProjects/AboExperimentLang/src/demo/DemoLangV001.g4 by ANTLR 4.0
package demo;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DemoLangV001Parser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SFN_ONEPLUS=1, SFN_ONEMINUS=2, SFN_PLUS=3, SFN_MINUS=4, SFN_MULTIPLY=5, 
		SFN_DIVIDE=6, SFN_LESSTHAN=7, SFN_GREATERTHAN=8, SFN_EQUAL=9, SFN_NEGATE=10, 
		T_ARROWLEFT=11, T_ARROWRIGHT=12, T_BRACELEFT=13, T_BRACERIGHT=14, T_BRACKETLEFT=15, 
		T_BRACKETRIGHT=16, T_BREAK=17, T_COLON=18, T_COMMA=19, T_CONTINUE=20, 
		T_DO=21, T_DOT=22, T_ELSE=23, T_END=24, T_FALSE=25, T_FUNCTION=26, T_FVAR=27, 
		T_GVAR=28, T_IF=29, T_ITERATION=30, T_MAP=31, T_NULL=32, T_PARENLEFT=33, 
		T_PARENRIGHT=34, T_QMARK=35, T_RETURN=36, T_THEN=37, T_TRUE=38, T_VAL=39, 
		T_VAR=40, T_WHILE=41, ID=42, NUMBER=43, STRING=44, WS=45;
	public static final String[] tokenNames = {
		"<INVALID>", "'1+'", "'1-'", "'+'", "'-'", "'*'", "'/'", "'<'", "'>'", 
		"'='", "'!'", "'<-'", "'->'", "'{'", "'}'", "'['", "']'", "'break'", "':'", 
		"','", "'continue'", "'do'", "'.'", "'else'", "'end'", "'false'", "'function'", 
		"'fvar'", "'gvar'", "'if'", "'iteration'", "'Map'", "'null'", "'('", "')'", 
		"'?'", "'return'", "'then'", "'true'", "'val'", "'var'", "'while'", "ID", 
		"NUMBER", "STRING", "WS"
	};
	public static final int
		RULE_script = 0, RULE_iteration = 1, RULE_globalDefs = 2, RULE_gvarDef = 3, 
		RULE_functionDef = 4, RULE_functionDefParams = 5, RULE_functionDefParam = 6, 
		RULE_functionBody = 7, RULE_block = 8, RULE_expr = 9, RULE_identifier = 10, 
		RULE_literal = 11, RULE_functionCall = 12, RULE_functionIdentifier = 13, 
		RULE_functionCallParams = 14, RULE_object = 15, RULE_array = 16, RULE_pair = 17, 
		RULE_booleanValue = 18, RULE_stmt = 19, RULE_stmtVarDef = 20, RULE_stmtAssign = 21, 
		RULE_stmtContinue = 22, RULE_stmtBreak = 23, RULE_stmtReturn = 24, RULE_stmtIf = 25, 
		RULE_stmtWhile = 26;
	public static final String[] ruleNames = {
		"script", "iteration", "globalDefs", "gvarDef", "functionDef", "functionDefParams", 
		"functionDefParam", "functionBody", "block", "expr", "identifier", "literal", 
		"functionCall", "functionIdentifier", "functionCallParams", "object", 
		"array", "pair", "booleanValue", "stmt", "stmtVarDef", "stmtAssign", "stmtContinue", 
		"stmtBreak", "stmtReturn", "stmtIf", "stmtWhile"
	};

	@Override
	public String getGrammarFileName() { return "DemoLangV001.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public DemoLangV001Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ScriptContext extends ParserRuleContext {
		public GlobalDefsContext globalDefs() {
			return getRuleContext(GlobalDefsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DemoLangV001Parser.EOF, 0); }
		public IterationContext iteration() {
			return getRuleContext(IterationContext.class,0);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).exitScript(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_la = _input.LA(1);
			if (_la==T_FUNCTION || _la==T_GVAR) {
				{
				setState(54); globalDefs();
				}
			}

			setState(57); iteration();
			setState(58); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IterationContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public IterationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iteration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).enterIteration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).exitIteration(this);
		}
	}

	public final IterationContext iteration() throws RecognitionException {
		IterationContext _localctx = new IterationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_iteration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60); match(T_ITERATION);
			setState(61); block();
			setState(62); match(T_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalDefsContext extends ParserRuleContext {
		public List<FunctionDefContext> functionDef() {
			return getRuleContexts(FunctionDefContext.class);
		}
		public List<GvarDefContext> gvarDef() {
			return getRuleContexts(GvarDefContext.class);
		}
		public GvarDefContext gvarDef(int i) {
			return getRuleContext(GvarDefContext.class,i);
		}
		public FunctionDefContext functionDef(int i) {
			return getRuleContext(FunctionDefContext.class,i);
		}
		public GlobalDefsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalDefs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).enterGlobalDefs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).exitGlobalDefs(this);
		}
	}

	public final GlobalDefsContext globalDefs() throws RecognitionException {
		GlobalDefsContext _localctx = new GlobalDefsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_globalDefs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(66);
				switch (_input.LA(1)) {
				case T_GVAR:
					{
					setState(64); gvarDef();
					}
					break;
				case T_FUNCTION:
					{
					setState(65); functionDef();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(68); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T_FUNCTION || _la==T_GVAR );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GvarDefContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public GvarDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gvarDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).enterGvarDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).exitGvarDef(this);
		}
	}

	public final GvarDefContext gvarDef() throws RecognitionException {
		GvarDefContext _localctx = new GvarDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_gvarDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70); match(T_GVAR);
			setState(71); identifier();
			setState(72); match(T_ARROWLEFT);
			setState(73); expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefContext extends ParserRuleContext {
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public FunctionDefParamsContext functionDefParams() {
			return getRuleContext(FunctionDefParamsContext.class,0);
		}
		public FunctionDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).enterFunctionDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).exitFunctionDef(this);
		}
	}

	public final FunctionDefContext functionDef() throws RecognitionException {
		FunctionDefContext _localctx = new FunctionDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75); match(T_FUNCTION);
			setState(76); identifier();
			setState(77); match(T_PARENLEFT);
			setState(79);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(78); functionDefParams();
				}
			}

			setState(81); match(T_PARENRIGHT);
			setState(82); functionBody();
			setState(83); match(T_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefParamsContext extends ParserRuleContext {
		public FunctionDefParamContext functionDefParam(int i) {
			return getRuleContext(FunctionDefParamContext.class,i);
		}
		public List<FunctionDefParamContext> functionDefParam() {
			return getRuleContexts(FunctionDefParamContext.class);
		}
		public FunctionDefParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefParams; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).enterFunctionDefParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).exitFunctionDefParams(this);
		}
	}

	public final FunctionDefParamsContext functionDefParams() throws RecognitionException {
		FunctionDefParamsContext _localctx = new FunctionDefParamsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionDefParams);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85); functionDefParam();
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(86); functionDefParam();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefParamContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DemoLangV001Parser.ID, 0); }
		public FunctionDefParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefParam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).enterFunctionDefParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).exitFunctionDefParam(this);
		}
	}

	public final FunctionDefParamContext functionDefParam() throws RecognitionException {
		FunctionDefParamContext _localctx = new FunctionDefParamContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionDefParam);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionBodyContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public FunctionBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).enterFunctionBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).exitFunctionBody(this);
		}
	}

	public final FunctionBodyContext functionBody() throws RecognitionException {
		FunctionBodyContext _localctx = new FunctionBodyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_functionBody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(96); stmt();
				}
				}
				setState(99); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SFN_ONEPLUS) | (1L << SFN_ONEMINUS) | (1L << SFN_PLUS) | (1L << SFN_MINUS) | (1L << SFN_MULTIPLY) | (1L << SFN_DIVIDE) | (1L << SFN_LESSTHAN) | (1L << SFN_GREATERTHAN) | (1L << SFN_EQUAL) | (1L << SFN_NEGATE) | (1L << T_BREAK) | (1L << T_CONTINUE) | (1L << T_IF) | (1L << T_RETURN) | (1L << T_VAR) | (1L << T_WHILE) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExprIndexingContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ExprIndexingContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).enterExprIndexing(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).exitExprIndexing(this);
		}
	}
	public static class ExprIdContext extends ExprContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ExprIdContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).enterExprId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).exitExprId(this);
		}
	}
	public static class ExprFcallContext extends ExprContext {
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public ExprFcallContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).enterExprFcall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).exitExprFcall(this);
		}
	}
	public static class ExprProprefContext extends ExprContext {
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public ExprProprefContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).enterExprPropref(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).exitExprPropref(this);
		}
	}
	public static class ExprLiteralContext extends ExprContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public ExprLiteralContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).enterExprLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).exitExprLiteral(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_expr);
		try {
			setState(113);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new ExprFcallContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(101); functionCall();
				}
				break;

			case 2:
				_localctx = new ExprIndexingContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(102); identifier();
				setState(103); match(T_BRACKETLEFT);
				setState(104); expr();
				setState(105); match(T_BRACKETRIGHT);
				}
				break;

			case 3:
				_localctx = new ExprProprefContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(107); identifier();
				setState(108); match(T_DOT);
				setState(109); identifier();
				}
				break;

			case 4:
				_localctx = new ExprIdContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(111); identifier();
				}
				break;

			case 5:
				_localctx = new ExprLiteralContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(112); literal();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DemoLangV001Parser.ID, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).exitIdentifier(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
	 
		public LiteralContext() { }
		public void copyFrom(LiteralContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StringLiteralContext extends LiteralContext {
		public TerminalNode STRING() { return getToken(DemoLangV001Parser.STRING, 0); }
		public StringLiteralContext(LiteralContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).enterStringLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).exitStringLiteral(this);
		}
	}
	public static class ObjectLiteralContext extends LiteralContext {
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public ObjectLiteralContext(LiteralContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).enterObjectLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).exitObjectLiteral(this);
		}
	}
	public static class ArrayLiteralContext extends LiteralContext {
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public ArrayLiteralContext(LiteralContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).enterArrayLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).exitArrayLiteral(this);
		}
	}
	public static class NullLiteralContext extends LiteralContext {
		public NullLiteralContext(LiteralContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).enterNullLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).exitNullLiteral(this);
		}
	}
	public static class NumberLiteralContext extends LiteralContext {
		public TerminalNode NUMBER() { return getToken(DemoLangV001Parser.NUMBER, 0); }
		public NumberLiteralContext(LiteralContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).enterNumberLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).exitNumberLiteral(this);
		}
	}
	public static class BooleanLiteralContext extends LiteralContext {
		public BooleanValueContext booleanValue() {
			return getRuleContext(BooleanValueContext.class,0);
		}
		public BooleanLiteralContext(LiteralContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).enterBooleanLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DemoLangV001Listener ) ((DemoLangV001Listener)listener).exitBooleanLiteral(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_literal);
		try {
			setState(123);
			switch (_input.LA(1)) {
			case STRING:
				_localctx = new StringLiteralContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(117); match(STRING);
				}
				break;
			case NUMBER:
				_localctx = new NumberLiteralContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(118); match(NUMBER);
				}
				break;
			case T_BRACELEFT:
				_localctx = new ObjectLiteralContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(119); object();
				}
				break;
			case T_BRACKETLEFT:
				_localctx = new ArrayLiteralContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(120); array();
				}
				break;
			case T_FALSE:
			case T_TRUE:
				_localctx = new BooleanLiteralContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(121); booleanValue();
				}
				break;
			case T_NULL:
				_localctx = new NullLiteralContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(122); match(T_NULL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
